@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add 'move_to' function, that can be used later on for eg plugins
+(should replace Python's CFMove).
+ include/sproto.h
+ server/monster.c move.c
+Nicolas Weeger 2008-05-11
+
 Merge NPC and MAGIC_EAR handling, add comments, fix prototype to use const.
  include/sproto.h
  server/monster.c
